--- a/example.ipynb
+++ b/example.ipynb
@@ -9,187 +9,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rip Curl Pro Bells Beach Results\n",
-      "Round 1:\n",
-      "\tHeat 1:\n",
-      "\t\tOwen Wright: 8.20\n",
-      "\t\tJeremy Flores: 9.97\n",
-      "\t\tJadson Andre: 12.23\n",
-      "\tHeat 2:\n",
-      "\t\tJordy Smith: 10.26\n",
-      "\t\tAdrian Buchan: 8.07\n",
-      "\t\tJack Freestone: 7.84\n",
-      "\tHeat 3:\n",
-      "\t\tFilipe Toledo: 15.87\n",
-      "\t\tXavier Huxtable: 10.23\n",
-      "\t\tKelly Slater: 10.63\n",
-      "\tHeat 4:\n",
-      "\t\tItalo Ferreira: 10.06\n",
-      "\t\tEzekiel Lau: 10.57\n",
-      "\t\tCaio Ibelli: 9.73\n",
-      "\tHeat 5:\n",
-      "\t\tJulian Wilson: 13.73\n",
-      "\t\tJoan Duru: 11.00\n",
-      "\t\tJacob Willcox: 13.74\n",
-      "\tHeat 6:\n",
-      "\t\tGabriel Medina: 13.70\n",
-      "\t\tRyan Callinan: 13.00\n",
-      "\t\tHarrison Mann: 7.87\n",
-      "\tHeat 7:\n",
-      "\t\tConner Coffin: 10.77\n",
-      "\t\tMichael Rodrigues: 9.56\n",
-      "\t\tLeonardo Fioravanti: 10.60\n",
-      "\tHeat 8:\n",
-      "\t\tKolohe Andino: 10.77\n",
-      "\t\tSeth Moniz: 8.67\n",
-      "\t\tSoli Bailey: 8.37\n",
-      "\tHeat 9:\n",
-      "\t\tWade Carmichael: 8.04\n",
-      "\t\tYago Dora: 10.10\n",
-      "\t\tRicardo Christie: 11.83\n",
-      "\tHeat 10:\n",
-      "\t\tMichel Bourez: 10.60\n",
-      "\t\tReef Heazlewood: 10.34\n",
-      "\t\tDeivid Silva: 10.67\n",
-      "\tHeat 11:\n",
-      "\t\tJohn John Florence: 13.00\n",
-      "\t\tWillian Cardoso: 7.67\n",
-      "\t\tJesse Mendes: 7.53\n",
-      "\tHeat 12:\n",
-      "\t\tKanoa Igarashi: 10.46\n",
-      "\t\tMikey Wright: 9.33\n",
-      "\t\tPeterson Crisanto: 10.87\n",
-      "Round 2:\n",
-      "\tHeat 1:\n",
-      "\t\tOwen Wright: 11.30\n",
-      "\t\tJack Freestone: 10.80\n",
-      "\t\tHarrison Mann: 8.37\n",
-      "\tHeat 2:\n",
-      "\t\tWade Carmichael: 11.74\n",
-      "\t\tSoli Bailey: 13.03\n",
-      "\t\tXavier Huxtable: 11.40\n",
-      "\tHeat 3:\n",
-      "\t\tMikey Wright: 11.50\n",
-      "\t\tJesse Mendes: 11.46\n",
-      "\t\tReef Heazlewood: 12.67\n",
-      "\tHeat 4:\n",
-      "\t\tMichael Rodrigues: 12.83\n",
-      "\t\tJoan Duru: 7.64\n",
-      "\t\tCaio Ibelli: 11.07\n",
-      "Round 3:\n",
-      "\tHeat 1:\n",
-      "\t\tJulian Wilson: 7.20\n",
-      "\t\tKelly Slater: 11.84\n",
-      "\tHeat 2:\n",
-      "\t\tPeterson Crisanto: 11.97\n",
-      "\t\tMichael Rodrigues: 11.67\n",
-      "\tHeat 3:\n",
-      "\t\tConner Coffin: 13.43\n",
-      "\t\tSoli Bailey: 11.83\n",
-      "\tHeat 4:\n",
-      "\t\tMichel Bourez: 10.76\n",
-      "\t\tRyan Callinan: 12.50\n",
-      "\tHeat 5:\n",
-      "\t\tFilipe Toledo: 14.50\n",
-      "\t\tCaio Ibelli: 13.07\n",
-      "\tHeat 6:\n",
-      "\t\tMikey Wright: 8.50\n",
-      "\t\tSeth Moniz: 14.00\n",
-      "\tHeat 7:\n",
-      "\t\tKolohe Andino: 12.20\n",
-      "\t\tJacob Willcox: 13.24\n",
-      "\tHeat 8:\n",
-      "\t\tWade Carmichael: 11.87\n",
-      "\t\tDeivid Silva: 13.17\n",
-      "\tHeat 9:\n",
-      "\t\tGabriel Medina: 16.03\n",
-      "\t\tReef Heazlewood: 7.80\n",
-      "\tHeat 10:\n",
-      "\t\tWillian Cardoso: 12.20\n",
-      "\t\tYago Dora: 9.63\n",
-      "\tHeat 11:\n",
-      "\t\tOwen Wright: 16.10\n",
-      "\t\tRicardo Christie: 12.07\n",
-      "\tHeat 12:\n",
-      "\t\tJohn John Florence: 17.67\n",
-      "\t\tJadson Andre: 11.24\n",
-      "\tHeat 13:\n",
-      "\t\tItalo Ferreira: 13.76\n",
-      "\t\tJack Freestone: 9.10\n",
-      "\tHeat 14:\n",
-      "\t\tEzekiel Lau: 13.44\n",
-      "\t\tJeremy Flores: 14.03\n",
-      "\tHeat 15:\n",
-      "\t\tKanoa Igarashi: 12.07\n",
-      "\t\tAdrian Buchan: 11.93\n",
-      "\tHeat 16:\n",
-      "\t\tJordy Smith: 14.10\n",
-      "\t\tLeonardo Fioravanti: 13.27\n",
-      "Round 4:\n",
-      "\tHeat 1:\n",
-      "\t\tKelly Slater: 10.80\n",
-      "\t\tPeterson Crisanto: 6.87\n",
-      "\tHeat 2:\n",
-      "\t\tConner Coffin: 9.93\n",
-      "\t\tRyan Callinan: 13.93\n",
-      "\tHeat 3:\n",
-      "\t\tFilipe Toledo: 14.10\n",
-      "\t\tSeth Moniz: 7.13\n",
-      "\tHeat 4:\n",
-      "\t\tJacob Willcox: 11.80\n",
-      "\t\tDeivid Silva: 10.04\n",
-      "\tHeat 5:\n",
-      "\t\tGabriel Medina: 17.27\n",
-      "\t\tWillian Cardoso: 7.76\n",
-      "\tHeat 6:\n",
-      "\t\tOwen Wright: 16.97\n",
-      "\t\tJohn John Florence: 18.16\n",
-      "\tHeat 7:\n",
-      "\t\tItalo Ferreira: 12.20\n",
-      "\t\tJeremy Flores: 6.03\n",
-      "\tHeat 8:\n",
-      "\t\tKanoa Igarashi: 11.03\n",
-      "\t\tJordy Smith: 13.10\n",
-      "Round 5:\n",
-      "\tHeat 1:\n",
-      "\t\tKelly Slater: 5.67\n",
-      "\t\tRyan Callinan: 12.67\n",
-      "\tHeat 2:\n",
-      "\t\tFilipe Toledo: 14.17\n",
-      "\t\tJacob Willcox: 13.06\n",
-      "\tHeat 3:\n",
-      "\t\tGabriel Medina: 15.17\n",
-      "\t\tJohn John Florence: 16.87\n",
-      "\tHeat 4:\n",
-      "\t\tItalo Ferreira: 8.40\n",
-      "\t\tJordy Smith: 15.23\n",
-      "Round 6:\n",
-      "\tHeat 1:\n",
-      "\t\tRyan Callinan: 12.84\n",
-      "\t\tFilipe Toledo: 13.40\n",
-      "\tHeat 2:\n",
-      "\t\tJohn John Florence: 16.80\n",
-      "\t\tJordy Smith: 15.24\n",
-      "Round 7:\n",
-      "\tHeat 1:\n",
-      "\t\tFilipe Toledo: 13.83\n",
-      "\t\tJohn John Florence: 14.30\n"
+      "Drafted teams:\n",
+      "--------------\n",
+      "alec\n",
+      "\tItalo Ferreira\n",
+      "\tGabriel Medina\n",
+      "\tRyan Callinan\n",
+      "\tKelly Slater\n",
+      "\tJeremy Flores\n",
+      "\tReef Heazlewood\n",
+      "\tEzekiel Lau\n",
+      "\tSebastian Zietz\n",
+      "\tLeonardo Fioravanti\n",
+      "chuck\n",
+      "\tJordy Smith\n",
+      "\tKolohe Andino\n",
+      "\tWillian Cardoso\n",
+      "\tJacob Willcox\n",
+      "\tYago Dora\n",
+      "\tJulian Wilson\n",
+      "\tRicardo Christie\n",
+      "\tGriffin Colapinto\n",
+      "\tJadson Andre\n",
+      "mike\n",
+      "\tJohn John Florence\n",
+      "\tConner Coffin\n",
+      "\tSeth Moniz\n",
+      "\tWade Carmichael\n",
+      "\tMikey Wright\n",
+      "\tDeivid Silva\n",
+      "\tAdrian Buchan\n",
+      "\tJack Freestone\n",
+      "\tJesse Mendes\n",
+      "dusty\n",
+      "\tFilipe Toledo\n",
+      "\tOwen Wright\n",
+      "\tKanoa Igarashi\n",
+      "\tMichel Bourez\n",
+      "\tPeterson Crisanto\n",
+      "\tMichael Rodrigues\n",
+      "\tSoli Bailey\n",
+      "\tJoan Duru\n",
+      "\tCaio Ibelli\n",
+      "\n",
+      "\n",
+      "Results:\n",
+      "--------\n",
+      "1. mike with 28960 points\n",
+      "2. chuck with 25045 points\n",
+      "3. alec with 23915 points\n",
+      "4. dusty with 18865 points\n"
      ]
     }
    ],
    "source": [
-    "from event import Event\n",
+    "from event import Event, Competitor\n",
+    "import datetime\n",
+    "import time\n",
     "\n",
-    "event_url = 'https://www.worldsurfleague.com/events/2019/mct/2909/rip-curl-pro-bells-beach'\n",
-    "rip_curl_pro = Event(event_url)\n",
+    "now = time.time()\n",
+    "draft_date = datetime.datetime.fromtimestamp(now)\n",
+    "rip_curl_pro = Event('quiksilver-pro-gold-coast', 2019, 2908, draft_date)\n",
     "\n",
-    "print('Rip Curl Pro Bells Beach Results')\n",
-    "for i, round_ in enumerate(rip_curl_pro.rounds):\n",
-    "    print('Round {}:'.format(i+1))\n",
-    "    for j, heat in enumerate(round_.heats):\n",
-    "        print(\"\\tHeat {}:\".format(j+1))\n",
-    "        for athlete, score in zip(heat.athlete_names, heat.scores):\n",
-    "            print(\"\\t\\t{}: {:0.2f}\".format(athlete, score))"
+    "alec = Competitor('alec')\n",
+    "chuck = Competitor('chuck')\n",
+    "mike = Competitor('mike')\n",
+    "dusty = Competitor('dusty')\n",
+    "competitors = [alec, chuck, mike, dusty]\n",
+    "\n",
+    "for competitor in competitors:\n",
+    "    rip_curl_pro.add_competitor(competitor)\n",
+    "\n",
+    "mike.update_draft_order(rip_curl_pro, 'Conner Coffin', 1)\n",
+    "dusty.update_draft_order(rip_curl_pro, 'Owen Wright', 4)\n",
+    "chuck.update_draft_order(rip_curl_pro, 'Kanoa Igarashi', 15)\n",
+    "\n",
+    "rip_curl_pro.update_draft_order(mike, 0)\n",
+    "rip_curl_pro.update_draft_order(dusty, 3)\n",
+    "rip_curl_pro.draft()\n",
+    "\n",
+    "print(\"Drafted teams:\")\n",
+    "print(\"--------------\")\n",
+    "for competitor in competitors:\n",
+    "    print(competitor.name)\n",
+    "    for surfer in competitor.events[rip_curl_pro]['team']:\n",
+    "        print(\"\\t{}\".format(surfer))\n",
+    "\n",
+    "print(\"\\n\\nResults:\")\n",
+    "print(\"--------\")\n",
+    "for n, (competitor, score) in enumerate(\n",
+    "      zip(rip_curl_pro.ranked_competitors, rip_curl_pro.ranked_scores)):\n",
+    "    print(\"{}. {} with {} points\".format(n+1, competitor.name, score))"
    ]
   }
  ],
