updates to event

--- a/example.ipynb
+++ b/example.ipynb
@@ -12,53 +12,53 @@
       "Drafted teams:\n",
       "--------------\n",
       "alec\n",
+      "\tConner Coffin\n",
+      "\tFilipe Toledo\n",
+      "\tRyan Callinan\n",
+      "\tMichel Bourez\n",
+      "\tYago Dora\n",
+      "\tJulian Wilson\n",
+      "\tRicardo Christie\n",
+      "\tGriffin Colapinto\n",
+      "\tJadson Andre\n",
+      "chuck\n",
       "\tItalo Ferreira\n",
       "\tGabriel Medina\n",
-      "\tRyan Callinan\n",
+      "\tWillian Cardoso\n",
+      "\tMikey Wright\n",
+      "\tPeterson Crisanto\n",
+      "\tMichael Rodrigues\n",
+      "\tSoli Bailey\n",
+      "\tJoan Duru\n",
+      "\tCaio Ibelli\n",
+      "mike\n",
+      "\tJohn John Florence\n",
+      "\tOwen Wright\n",
+      "\tSeth Moniz\n",
       "\tKelly Slater\n",
       "\tJeremy Flores\n",
       "\tReef Heazlewood\n",
       "\tEzekiel Lau\n",
       "\tSebastian Zietz\n",
       "\tLeonardo Fioravanti\n",
-      "chuck\n",
+      "dusty\n",
       "\tJordy Smith\n",
       "\tKolohe Andino\n",
-      "\tWillian Cardoso\n",
-      "\tJacob Willcox\n",
-      "\tYago Dora\n",
-      "\tJulian Wilson\n",
-      "\tRicardo Christie\n",
-      "\tGriffin Colapinto\n",
-      "\tJadson Andre\n",
-      "mike\n",
-      "\tJohn John Florence\n",
-      "\tConner Coffin\n",
-      "\tSeth Moniz\n",
       "\tWade Carmichael\n",
-      "\tMikey Wright\n",
+      "\tKanoa Igarashi\n",
       "\tDeivid Silva\n",
       "\tAdrian Buchan\n",
       "\tJack Freestone\n",
       "\tJesse Mendes\n",
-      "dusty\n",
-      "\tFilipe Toledo\n",
-      "\tOwen Wright\n",
-      "\tKanoa Igarashi\n",
-      "\tMichel Bourez\n",
-      "\tPeterson Crisanto\n",
-      "\tMichael Rodrigues\n",
-      "\tSoli Bailey\n",
-      "\tJoan Duru\n",
-      "\tCaio Ibelli\n",
+      "\tMateus Herdy\n",
       "\n",
       "\n",
       "Results:\n",
       "--------\n",
-      "1. mike with 28960 points\n",
-      "2. chuck with 25045 points\n",
-      "3. alec with 23915 points\n",
-      "4. dusty with 18865 points\n"
+      "1. dusty with 28600 points\n",
+      "2. chuck with 26970 points\n",
+      "3. mike with 21990 points\n",
+      "4. alec with 20290 points\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     "\n",
     "now = time.time()\n",
     "draft_date = datetime.datetime.fromtimestamp(now)\n",
-    "rip_curl_pro = Event('quiksilver-pro-gold-coast', 2019, 2908, draft_date)\n",
+    "qs_pro = Event('quiksilver-pro-gold-coast', 2019, 2908, draft_date)\n",
     "\n",
     "alec = Competitor('alec')\n",
     "chuck = Competitor('chuck')\n",
@@ -77,30 +77,64 @@
     "dusty = Competitor('dusty')\n",
     "competitors = [alec, chuck, mike, dusty]\n",
     "\n",
-    "for competitor in competitors:\n",
-    "    rip_curl_pro.add_competitor(competitor)\n",
+    "qs_pro.add_competitors(competitors)\n",
     "\n",
-    "mike.update_draft_order(rip_curl_pro, 'Conner Coffin', 1)\n",
-    "dusty.update_draft_order(rip_curl_pro, 'Owen Wright', 4)\n",
-    "chuck.update_draft_order(rip_curl_pro, 'Kanoa Igarashi', 15)\n",
+    "mike.update_draft_order(qs_pro, 'Conner Coffin', 1)\n",
+    "dusty.update_draft_order(qs_pro, 'Owen Wright', 4)\n",
+    "chuck.update_draft_order(qs_pro, 'Kanoa Igarashi', 15)\n",
     "\n",
-    "rip_curl_pro.update_draft_order(mike, 0)\n",
-    "rip_curl_pro.update_draft_order(dusty, 3)\n",
-    "rip_curl_pro.draft()\n",
+    "qs_pro.update_draft_order(mike, 0)\n",
+    "qs_pro.update_draft_order(dusty, 3)\n",
+    "qs_pro.draft()\n",
     "\n",
     "print(\"Drafted teams:\")\n",
     "print(\"--------------\")\n",
     "for competitor in competitors:\n",
     "    print(competitor.name)\n",
-    "    for surfer in competitor.events[rip_curl_pro]['team']:\n",
+    "    for surfer in competitor.events[qs_pro]['team']:\n",
     "        print(\"\\t{}\".format(surfer))\n",
     "\n",
     "print(\"\\n\\nResults:\")\n",
     "print(\"--------\")\n",
-    "for n, (competitor, score) in enumerate(\n",
-    "      zip(rip_curl_pro.ranked_competitors, rip_curl_pro.ranked_scores)):\n",
+    "for n, (competitor, score) in enumerate(qs_pro.ranked_competitors.items()):\n",
     "    print(\"{}. {} with {} points\".format(n+1, competitor.name, score))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Julian Wilson', 'Leonardo Fioravanti', 'Mateus Herdy', 'Jordy Smith', 'Ricardo Christie', 'Caio Ibelli', 'Owen Wright', 'Peterson Crisanto', 'Kelly Slater', 'Willian Cardoso', 'Sebastian Zietz', 'Jadson Andre']\n",
+      "['Julian Wilson', 'Sebastian Zietz']\n",
+      "['Jordy Smith', 'Kelly Slater']\n",
+      "['Owen Wright', 'Caio Ibelli']\n",
+      "['Willian Cardoso', 'Leonardo Fioravanti']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from event import get_athlete_rankings\n",
+    "print(qs_pro.rounds[1].athlete_names)\n",
+    "ordered = []\n",
+    "for name in get_athlete_rankings(2018):\n",
+    "    if name in qs_pro.rounds[1].athlete_names:\n",
+    "        ordered.append(name)\n",
+    "\n",
+    "for i in range(4):\n",
+    "    print(ordered[i::4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
